--- a/index.html
+++ b/index.html
@@ -4,4 +4,8 @@
         <meta charset="utf-8">
         <title>crap portfolio</title>
     </head>
+    <body>
+        <h1>test</h1>
+        <h2>testingggg</h2>
+    </body>
 </html>
